tests/outref/TERR031.ref

-- TERR031 : OCTO502 : Error scenarios in AS column name alias list

-- Test of ERR_AS_MORE_COLUMNS
SELECT * FROM names AS abcd(a,b,c,d);
SELECT a,b,c FROM (SELECT firstname,lastname FROM names) AS abcd(a,b,c,d);
SELECT col1 FROM (SELECT 1 AS col1) AS tbl(a,b);

-- Test of ERR_UNKNOWN_COLUMN_NAME
SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
SELECT a,lastname,c FROM (SELECT * FROM names) AS abcd(a,b,c);

-- Test of ERR_MISSING_FROM_ENTRY
SELECT names.id,b,c FROM names AS abcd(a,b,c);

-- Test of ERR_AS_MORE_COLUMNS with VALUES clause
SELECT * FROM (VALUES (1), (3), (5), (7), (9) ) AS MyTable(a,b);

-- Test of ERR_UNKNOWN_COLUMN_NAME with VALUES clause
SELECT * FROM names WHERE (id = (SELECT x FROM (VALUES(y)) AS tbl(x)));

[ERROR]: ERR_AS_MORE_COLUMNS: Table name 'ABCD' has 3 columns available but 4 columns specified
LINE 1: SELECT * FROM names AS abcd(a,b,c,d);
                               ^^^^
[ERROR]: ERR_AS_MORE_COLUMNS: Table name 'ABCD' has 2 columns available but 4 columns specified
LINE 1: ...,c FROM (SELECT firstname,lastname FROM names) AS abcd(a,b,c,d);
                                                             ^^^^
[ERROR]: ERR_AS_MORE_COLUMNS: Table name 'TBL' has 1 columns available but 2 columns specified
LINE 1: SELECT col1 FROM (SELECT 1 AS col1) AS tbl(a,b);
                                               ^^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: ID
LINE 1: SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
               ^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: FIRSTNAME
LINE 1: SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
                  ^^^^^^^^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: LASTNAME
LINE 1: SELECT id,firstname,lastname FROM names AS abcd(a,b,c);
                            ^^^^^^^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: LASTNAME
LINE 1: SELECT a,lastname,c FROM (SELECT * FROM names) AS abcd(a,b,c);
                 ^^^^^^^^
[ERROR]: ERR_MISSING_FROM_ENTRY: Missing FROM-clause entry for table : NAMES
LINE 1: SELECT names.id,b,c FROM names AS abcd(a,b,c);
               ^^^^^^^^
[ERROR]: ERR_AS_MORE_COLUMNS: Table name 'MYTABLE' has 1 columns available but 2 columns specified
LINE 1: SELECT * FROM (VALUES (1), (3), (5), (7), (9) ) AS MyTable(a,b);
                                                           ^^^^^^^
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: Y
LINE 1: ... FROM names WHERE (id = (SELECT x FROM (VALUES(y)) AS tbl(x)));
                                                          ^
